package com.example.secondstoryproject.models;

import com.google.firebase.database.Exclude;
import com.google.firebase.database.IgnoreExtraProperties;

import java.util.ArrayList;
import java.util.Date;

@IgnoreExtraProperties
public class User implements Idable {

    private String id;
    private String userName;
    private String password;
    private String fName;
    private String lName;
    private String email;
    private String phoneNumber;
    private String dateOfBirth;
    private int donationCounter;
    private String profilePic;
    private boolean isAdmin;
    private boolean isActive = true; //ברירת מחדל פעיל
    private ArrayList<Donation> donationList;
    private Date createdAt;

    public enum NotificationType {
        PHONE_NUMBER,
        EMAIL
    }
    private NotificationType notifications;

    // בנאי עבור ההרשמה
    public User(String id, String userName, String password,
                String fName, String lName,
                String email, String phoneNumber, String dateOfBirth) {

        this.id = id;
        this.userName = userName;
        this.password = password;
        this.fName = fName;
        this.lName = lName;
        this.email = email;
        this.phoneNumber = phoneNumber;
        this.dateOfBirth = dateOfBirth;

        this.donationCounter = 0;
        this.isAdmin = false;
        this.isActive = true;
        this.profilePic = null;

        this.donationList = new ArrayList<>();
        this.notifications = NotificationType.EMAIL;

        this.createdAt = new Date();

    }

    // בנאי מלא
    public User(String id, String userName, String password,
                String fName, String lName,
                String email, String phoneNumber, String dateOfBirth,
                int donationCounter, boolean isAdmin, String profilePhoneUrl) {

        this.id = id;
        this.userName = userName;
        this.password = password;
        this.fName = fName;
        this.lName = lName;
        this.email = email;
        this.phoneNumber = phoneNumber;
        this.dateOfBirth = dateOfBirth;

        this.donationCounter = donationCounter;
        this.isAdmin = isAdmin;
        this.isActive = true;
        this.profilePic = profilePhoneUrl;

        this.donationList = new ArrayList<>();
        this.notifications = NotificationType.EMAIL;
    }

    // בנאי ריק
    public User() {
        this.donationCounter = 0;
        this.isAdmin = false;
        this.isActive = true;

        this.donationList = new ArrayList<>();
        this.notifications = NotificationType.EMAIL;
    }

    // GET & SET
    public String getId() { return id; }
    public void setId(String id) { this.id = id; }
    public String getUserName() { return userName; }
    public void setUserName(String userName) { this.userName = userName; }
    public String getPassword() { return password; }
    public void setPassword(String password) { this.password = password; }
    public String getfName() { return fName; }
    public void setfName(String fName) { this.fName = fName; }
    public String getlName() { return lName; }
    public void setlName(String lName) { this.lName = lName; }
    public String getEmail() { return email; }
    public void setEmail(String email) { this.email = email; }
    public String getPhoneNumber() { return phoneNumber; }
    public void setPhoneNumber(String phoneNumber) { this.phoneNumber = phoneNumber; }
    public String getDateOfBirth() { return dateOfBirth; }
    public void setDateOfBirth(String dateOfBirth) { this.dateOfBirth = dateOfBirth; }
    public int getDonationCounter() { return donationCounter; }
    public void setDonationCounter(int donationCounter) { this.donationCounter = donationCounter; }
    public String getProfilePic() { return profilePic; }
    public void setProfilePic(String profilePic) { this.profilePic = profilePic; }
    public boolean isAdmin() { return isAdmin; }
    public void setAdmin(boolean admin) { isAdmin = admin; }

    public boolean isActive() { return isActive; }
    public void setActive(boolean active) { isActive = active; }

    public ArrayList<Donation> getDonationList() { return donationList; }
    public void setDonationList(ArrayList<Donation> donationList) { this.donationList = donationList; }
    public NotificationType getNotifications() { return notifications; }
    public void setNotifications(NotificationType notifications) { this.notifications = notifications; }

    public Date getCreatedAt() { return createdAt; }
    public void setCreatedAt(Date createdAt) { this.createdAt = createdAt; }


    @Exclude
    public UserLevel getLevel() {
        return UserLevel.fromDonationCount(donationCounter);
    }

    @Exclude
    public String getFullName() {
        return this.fName + " " + this.lName;
    }
}